[FEAT]Home inicial concluido

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,79 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/index.css" />
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-    <link rel="shortcut icon" href="../img/logoasociacion.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../img/logoasociacion.ico"
+      type="image/x-icon"
+    />
     <title>Home</title>
-</head>
-<body>
-    <header>
-        <div class="header__box">
-            <img class="header__img" src="../img/logoasociacion.jpg" alt="header__logo__asociacion">
-            <p class="header__text_logo">Asociación Gremial de Profesionales y Personal Superior de Vialidad Nacional
-            </p>
-            <div class="toggle">
-                <iconify-icon class="navbar__toggle" icon="fa6-solid:bars" style="color: white;"></iconify-icon>
-            </div>
-        </div>       
-        <nav class="navbar container">          
-            <ul class="navbar__menu">
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
-                </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./noticias.html">Noticias</a>
-                </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./institucional.html">Institucional</a>
-                </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
-                </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./capacitacion.html">Capacitación</a>
-                </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./contacto">Contacto</a>
-                </li>
-                <li class="navbar__item submenuopen destacado"><a class="navbar__link" href="./afiliate">Afiliate</a>
-                </li>  
-            </ul>
-        </nav>
+  </head>
+  <body>
+    <header id="header">
+      <div class="header__box">
+        <img
+          class="header__img"
+          src="../img/logoasociacion.jpg"
+          alt="header__logo__asociacion"
+        />
+        <p class="header__text_logo">
+          Asociación Gremial de Profesionales y Personal Superior de Vialidad
+          Nacional
+        </p>
+        <div class="toggle">
+          <iconify-icon
+            class="navbar__toggle"
+            icon="fa6-solid:bars"
+            style="color: white;"
+          ></iconify-icon>
+        </div>
+      </div>
+      <nav class="navbar container">
+        <ul class="navbar__menu">
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./home.html">Inicio</a>
+          </li>
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./noticias.html">Noticias</a>
+          </li>
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./institucional.html"
+              >Institucional</a
+            >
+          </li>
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./beneficios.html">Beneficios</a>
+          </li>
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./capacitacion.html">Capacitación</a>
+          </li>
+          <li class="navbar__item submenuopen">
+            <a class="navbar__link" href="./contacto">Contacto</a>
+          </li>
+          <li class="navbar__item submenuopen destacado">
+            <a class="navbar__link" href="./afiliate">Afiliate</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <section class="img_principal">
-        <p>oisahdoiasdjhoaisjd</p>
-    </section>
-    <section class="home">
-        
-    </section>
-    <footer>
-        <section class="footer__redes container">
-            <ul class="redes__lista">
-                <li class="redes__item"><a href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA==" class="redes__link" target="_blank"><iconify-icon icon="skill-icons:instagram"></iconify-icon></a></li>
-                <li class="redes__item"><a href="https://api.whatsapp.com/send/?phone=3512531787" class="redes__link" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a></li>
-                <li class="redes__item"><a href="mailto:info@profesionalesdnv.org.ar" class="redes__link" title="info@profesionalesdnv.org.ar"><iconify-icon icon="clarity:email-solid" style="color: #f86900;"></iconify-icon></a></li>
-            </ul>
-        </section>
-        <section class="footer__info container">
-            <ul class="footer_lista">
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-            </ul>
-        </section>
-        <p class="footer__line container"></p>
-        <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
-        <p class="footer__info container">Todos los derechos reservados &copy; Profesionales DNV 2023 </p>
+    <main id="main">
+      <section class="img_principal">
+        <div class="main_texts">
+          <p class="main_text">Desde el año 2000</p>
+          <p class="main_text">Caminando Junto a nuestros afiliados</p>
+        </div>
+      </section>
+      <section class="home"></section>
+      <section class="banner_premios"></section>
+    </main>
+    <footer id="footer">
+      <section class="footer__redes container">
+        <ul class="redes__lista">
+          <li class="redes__item">
+            <a
+              href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA=="
+              class="redes__link"
+              target="_blank"
+              ><iconify-icon icon="skill-icons:instagram"></iconify-icon
+            ></a>
+          </li>
+          <li class="redes__item">
+            <a
+              href="https://api.whatsapp.com/send/?phone=3512531787"
+              class="redes__link"
+              target="_blank"
+              ><iconify-icon icon="logos:whatsapp-icon"></iconify-icon
+            ></a>
+          </li>
+          <li class="redes__item">
+            <a
+              href="mailto:info@profesionalesdnv.org.ar"
+              class="redes__link"
+              title="info@profesionalesdnv.org.ar"
+              ><iconify-icon
+                icon="clarity:email-solid"
+                style="color: #f86900;"
+              ></iconify-icon
+            ></a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer__info container">
+        <ul class="footer_lista">
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+          <li class="footer_item"></li>
+        </ul>
+      </section>
+      <p class="footer__line container"></p>
+      <p class="footer__info container">
+        Chacabuco 194 - 2° Piso A - C.A.B.A. -
+        <iconify-icon icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779
+      </p>
+      <p class="footer__info container">
+        Todos los derechos reservados &copy; Profesionales DNV 2023
+      </p>
     </footer>
-    <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon icon="logos:whatsapp-icon"></iconify-icon></a>
+    <a
+      href="https://api.whatsapp.com/send/?phone=3512531787"
+      class="wsp_float"
+      target="_blank"
+      ><iconify-icon icon="logos:whatsapp-icon"></iconify-icon
+    ></a>
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="../js/glide.js"></script>
-</body>
+    <script src="../js/calcularPantalla.js"></script>
+  </body>
 </html>
