--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="navbar container">
             <ul class="navbar__menu">
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Inicio</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
@@ -45,19 +45,19 @@
     <section class="sbeneficios glide">
         <div class="banner glide__track" data-glide-el="track">
             <ul class="glide__slides">
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida-removebg-preview.png"
                         alt=""></li>
                 <li class="glide__slide banner__1"><img class="banner__img"
-                        src="../img/Regalo_de_bienvenida-removebg-preview.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                        src="../img/banner_beneficios/Regalo_de_bienvenida__.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
                         alt=""></li>
             </ul>
         </div>
