--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="header__box">
             <img class="header__img" src="../img/logoasociacion.jpg" alt="header__logo__asociacion">
             <p class="header__text_logo">Asociación Gremial de Profesionales y Personal Superior de Vialidad Nacional
@@ -22,7 +22,7 @@
         </div>
         <nav class="navbar container">          
             <ul class="navbar__menu">
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Inicio</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
@@ -174,7 +174,7 @@
                         y nacionales</h3>
                 </div>
                 <div class="box box-9">
-                    <img class="box-img" src="../img/reunion_1.png" alt="Reunión realizada en Sede">
+                    <img class="box-img" src="../img/sede/reunion_1.png" alt="Reunión realizada en Sede">
                 </div>
 
             </div>
@@ -182,15 +182,15 @@
         <article>
             <h2 class="article_title" id="aside_item4">Nuestra Sede</h2>
             <div class="article_sede">
-                <img class="article-img_1" src="../img/sede_2.png" alt="Foto Sede Asociación">
+                <img class="article-img_1" src="../img/sede/sede_2.png" alt="Foto Sede Asociación">
                 <iframe class="article-iframe_mapa"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6567.513109211398!2d-58.376212!3d-34.610317!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad3f269f2d7%3A0x462b10bb6166a57b!2sChacabuco%20194%2C%20C1069AAD%20CABA!5e0!3m2!1ses-419!2sar!4v1703083213128!5m2!1ses-419!2sar"
                     width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="article_sede">
-                <img class="article-img_2" style="height: 100%;" src="../img/sede_1.png" alt="Foto Sede Asociación">
-                <img class="article-img_3" src="../img/sede_3.png" alt="Foto Sede Asociación">
+                <img class="article-img_2" style="height: 100%;" src="../img/sede/sede_1.png" alt="Foto Sede Asociación">
+                <img class="article-img_3" src="../img/sede/sede_3.png" alt="Foto Sede Asociación">
             </div>
         </article>
         <article>
@@ -295,10 +295,7 @@
         <!-- <aside class="aside_right">
         </aside> -->
     </section>
-    <script src="../js/menu.js"></script>
-    <script src="../js/scroll.js"></script>
-    <script src="../js/glide.js"></script>
-    <footer>
+    <footer id="footer">
         <section class="footer__redes container">
             <ul class="redes__lista">
                 <li class="redes__item"><a href="https://instagram.com/profesionalesdnv?igshid=OGQ5ZDc2ODk2ZA=="
@@ -334,7 +331,10 @@
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
             icon="logos:whatsapp-icon"></iconify-icon></a>
-
+            <script src="../js/menu.js"></script>
+            <script src="../js/scroll.js"></script>
+            <script src="../js/glide.js"></script>
+            <script src="../js/calcularPantalla.js"></script>
 </body>
 
 </html>
