[FEAT] Slider Home en proceso

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -42,7 +42,7 @@
             </ul>
         </nav>
     </header>
-    <section class="sbeneficios glide">
+    <section class="glide">
         <div class="banner glide__track" data-glide-el="track">
             <ul class="glide__slides">
                 <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida-removebg-preview.png"
