--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css"
+    />
     <link rel="stylesheet" href="../css/index.css" />
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <link
@@ -60,16 +68,97 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main class="main_principal" id="main">
       <section class="img_principal">
         <div class="main_texts">
           <p class="main_text">Desde el año 2000</p>
           <p class="main_text">Caminando Junto a nuestros afiliados</p>
         </div>
+    </main>
+      </section>
+      <section class="main_principal glide">
+        <div class="banner_sorteos glide__track" data-glide-el="track">
+          <ul class="glide__slides">
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/premios/sorteoSeptiembre.jpeg"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/premios/sorteoOctubre.jpeg"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                alt=""
+              />
+            </li>
+
+            <li class="glide__slide banner__1">
+              <img
+                class="banner__img"
+                src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                alt=""
+              />
+            </li>
+          </ul>
+        </div>
+        <div class="glide__arrows" data-glide-el="controls">
+          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+            <iconify-icon
+              class="iconify_chevron"
+              icon="ic:round-chevron-left"
+            ></iconify-icon>
+          </button>
+          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+            <iconify-icon
+              class="iconify_chevron"
+              icon="ic:round-chevron-right"
+            ></iconify-icon>
+          </button>
+        </div>
+
+        <div class="glide__bullets" data-glide-el="controls[nav]">
+          <button class="glide__bullet" data-glide-dir="=0"></button>
+          <button class="glide__bullet" data-glide-dir="=1"></button>
+          <button class="glide__bullet" data-glide-dir="=2"></button>
+        </div>
       </section>
       <section class="home"></section>
-      <section class="banner_premios"></section>
-    </main>
+
     <footer id="footer">
       <section class="footer__redes container">
         <ul class="redes__lista">
@@ -135,7 +224,8 @@
     ></a>
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
-    <script src="../js/glide.js"></script>
     <script src="../js/calcularPantalla.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="../js/glide.js"></script>
   </body>
 </html>
