--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -45,19 +45,19 @@
     <section class="glide">
         <div class="banner glide__track" data-glide-el="track">
             <ul class="glide__slides">
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida-removebg-preview.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regalo_bienvenida_p.png"
                         alt=""></li>
                 <li class="glide__slide banner__1"><img class="banner__img"
-                        src="../img/banner_beneficios/Regalo_de_bienvenida__.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                        src="../img/banner_beneficios/subsidio_casamiento_p.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/subsidio_nacimiento_p.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/sorteo_mensual_p.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regalo_anual_p.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src=""
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/Regalo_de_bienvenida__.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src=""
                         alt=""></li>
             </ul>
         </div>
