[FEAT] Slider Beneficios editado

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -42,22 +42,22 @@
             </ul>
         </nav>
     </header>
-    <section class="glide">
-        <div class="banner glide__track" data-glide-el="track">
+    <section class=" main_principal glide">
+        <div class="banner_sorteos glide__track" data-glide-el="track">
             <ul class="glide__slides">
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regalo_bienvenida_p.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/subsidioMatrimonio.png"
                         alt=""></li>
                 <li class="glide__slide banner__1"><img class="banner__img"
-                        src="../img/banner_beneficios/subsidio_casamiento_p.png" alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/subsidio_nacimiento_p.png"
+                        src="../img/banner_beneficios/subsidioNacimiento.png" alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/bonoFidelidad.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/sorteo_mensual_p.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regaloBienvenida.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regalo_anual_p.png"
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/bonoMensual.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src=""
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/alojamientoPropio.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src=""
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/descuentoHoteles.png"
                         alt=""></li>
             </ul>
         </div>
@@ -113,7 +113,7 @@
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script src="../js/glide.js"></script>
+    <script src="../js/glideBeneficios.js"></script>
 </body>
 
 </html>
