[FEAT] Contenido en beneficios

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -74,6 +74,11 @@
             <button class="glide__bullet" data-glide-dir="=2"></button>
         </div>
     </section>
+    <section class="container">
+        <div class="relleno">
+
+        </div>
+    </section>
     <footer>
         <section class="footer__redes container">
             <ul class="redes__lista">
