--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -55,10 +55,19 @@
                         alt=""></li>
                 <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/bonoMensual.png"
                         alt=""></li>
-                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/alojamientoPropio.png"
-                        alt=""></li>
+                <li class="glide__slide banner__1"><a href="#alojamiento"><img class="banner__img" src="../img/banner_beneficios/alojamientoPropio.png"
+                    alt=""></a></li>
                 <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/descuentoHoteles.png"
                         alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/convenioAmeport.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/beneficiosTuristicos.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/regaloExclusivo.png"
+                        alt=""></li>
+                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_beneficios/asesoriaGremial.png"
+                        alt=""></li>
+    
             </ul>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
@@ -75,7 +84,10 @@
         </div>
     </section>
     <section class="container">
-        <div class="relleno">
+        <article class="relleno">
+            <h2 id="alojamiento">Nuestros Departamentos</h2>
+        </article>
+            
 
         </div>
     </section>
