[FEAT] Finalización slider beneficios, inicio departamentos--

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -141,6 +141,9 @@
                     <h3 class="box-title">Comisión Revisora de Cuentas</h3>
                     <p>Miembros Titulares y Suplentes.</p>
                 </div>
+                <div class="box box-10 box-background_primary">
+                    <h3 class="box-title">Comisión de Género y Diversidad</h3>
+                </div>
                 <div class="box box-3 box-background_primary">
                     <h3 class="box-title">Seccionales</h3>
                     <p>Nuevo Centro Nuevo Cuyo Nordeste Noroeste
@@ -308,7 +311,7 @@
                             style="color: #f86900;"></iconify-icon></a></li>
             </ul>
         </section>
-        <section class="footer__info container">
+        <!-- <section class="footer__info container">
             <ul class="footer_lista">
                 <li class="footer_item"></li>
                 <li class="footer_item"></li>
@@ -323,7 +326,7 @@
                 <li class="footer_item"></li>
                 <li class="footer_item"></li>
             </ul>
-        </section>
+        </section> -->
         <p class="footer__line container"></p>
         <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon
                 icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
