cambios en slider

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../css/index.css">
     <title>Home</title>
 </head>
-
 <body>
     <header>
         <div class="header__box">
@@ -84,13 +83,39 @@
         </div>
     </section>
     <section class="container">
-        <h2 id="alojamiento">Nuestros Departamentos</h2>
-        <article class="relleno">
-            
+        <h2 class="title_alojamiento" id="alojamiento">Nuestros Departamentos</h2>
+        <article class="detalle_departamento">
+            <div class="banner_departamentos glidedepartamentos">
+                <div class="banner_sorteos glide__track" data-glide-el="track">
+                    <ul class="glide__slides">
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__1.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__2.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__3.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__4.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__5.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__6.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__7.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__8.jpeg"
+                                        alt=""></li>
+                                <li class="glide__slide banner__1"><img class="banner__img" src="../img/banner_departamentos/depto__10.jpeg"
+                                        alt=""></li>
+                    </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="iconify_chevron"
+                            icon="ic:round-chevron-left"></iconify-icon></button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon class="iconify_chevron"
+                            icon="ic:round-chevron-right"></iconify-icon></button>
+                </div>
+            </div>
         </article>
-            
-
-        </div>
     </section>
     <footer>
         <section class="footer__redes container">
@@ -131,7 +156,8 @@
     <script src="../js/menu.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script src="../js/glideBeneficios.js"></script>
+    <!-- <script src="../js/glideBeneficios.js"></script> -->
+    <script src="../js/glide.js"></script>
 </body>
 
 </html>
