[FEAT] prueba de segundo slider

--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -20,13 +20,14 @@
                 <iconify-icon class="navbar__toggle" icon="fa6-solid:bars" style="color: white;"></iconify-icon>
             </div>
         </div>
-        <nav class="navbar container">          
+        <nav class="navbar container">
             <ul class="navbar__menu">
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="./institucional.html">Institucional</a>
+                <li class="navbar__item submenuopen"><a class="navbar__link"
+                        href="./institucional.html">Institucional</a>
                 </li>
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./beneficios.html">Beneficios</a>
                 </li>
@@ -192,7 +193,8 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="article_sede">
-                <img class="article-img_2" style="height: 100%;" src="../img/sede/sede_1.png" alt="Foto Sede Asociación">
+                <img class="article-img_2" style="height: 100%;" src="../img/sede/sede_1.png"
+                    alt="Foto Sede Asociación">
                 <img class="article-img_3" src="../img/sede/sede_3.png" alt="Foto Sede Asociación">
             </div>
         </article>
@@ -311,22 +313,6 @@
                             style="color: #f86900;"></iconify-icon></a></li>
             </ul>
         </section>
-        <!-- <section class="footer__info container">
-            <ul class="footer_lista">
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-                <li class="footer_item"></li>
-            </ul>
-        </section> -->
         <p class="footer__line container"></p>
         <p class="footer__info container">Chacabuco 194 - 2° Piso A - C.A.B.A. - <iconify-icon
                 icon="mingcute:phone-fill"></iconify-icon> 011 - 43343779</p>
@@ -334,10 +320,10 @@
     </footer>
     <a href="https://api.whatsapp.com/send/?phone=3512531787" class="wsp_float" target="_blank"><iconify-icon
             icon="logos:whatsapp-icon"></iconify-icon></a>
-            <script src="../js/menu.js"></script>
-            <script src="../js/scroll.js"></script>
-            <script src="../js/glide.js"></script>
-            <script src="../js/calcularPantalla.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/scroll.js"></script>
+    <script src="../js/glide.js"></script>
+    <script src="../js/calcularPantalla.js"></script>
 </body>
 
 </html>
