[FEAT]Cambio en datos de departamentos

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -125,14 +125,16 @@
                                 <div role="tablist" class="dots1"></div>
                         </div>
                         <div class="glider_text">
-                                <h1>¡Importante! Nuevos datos para la reserva de departamentos:</h1>
-                                <h2>A partir de noviembre la única via de comunicación para consultas y reservas de los
-                                        departamentos es el celular <a
-                                                href="https://api.whatsapp.com/send/?phone=117723511"
+                                <h1>¡Importante! Datos para reserva de departamentos:</h1>
+                                <h2>Para reservas o consultas comunicate al whatsapp <a style="font-size: large;"
+                                                href="https://api.whatsapp.com/send/?phone=1521659825"
                                                 target="_blank"><iconify-icon
-                                                        icon="logos:whatsapp-icon"></iconify-icon></a></h2>
+                                                        icon="logos:whatsapp-icon"></iconify-icon></a> en el horario de 9 a 17 hs.</h2>
+                                
+                                <br>                        
+                                <h2>Datos de cuenta para pago de estadía:</h2>
                                 <br>
-                                                        <h3>CBU: 0110010540001013410080</h3>
+                                <h3>CBU: 0110010540001013410080</h3>
                                 <br>
                                 <h3>Alias: RESERVAS.DPTOS.AP</h3>
                                 <br>
