--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -138,8 +138,7 @@
                                 <br>
                                 <h3>Alias: RESERVAS.DPTOS.AP</h3>
                                 <br>
-                                <h3>Para su comodidad y evitar errores en el tipeo, se recomienda copiar y pegar los
-                                        datos previos.</h3>
+                                <h3>Se recomienda copiar y pegar los datos previos.</h3>
                         </div>
                 </article>
         </section>
