[FEAT]Cambio en datos de departamentos-2

--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -126,10 +126,10 @@
                         </div>
                         <div class="glider_text">
                                 <h1>¡Importante! Datos para reserva de departamentos:</h1>
-                                <h2>Para reservas o consultas comunicate al whatsapp <a style="font-size: large;"
-                                                href="https://api.whatsapp.com/send/?phone=1521659825"
-                                                target="_blank"><iconify-icon
-                                                        icon="logos:whatsapp-icon"></iconify-icon></a> en el horario de 9 a 17 hs.</h2>
+                                <h2>Para reservas o consultas comunicate al whatsapp <a class="wsp_reserva" style="font-size: large;"
+                                                href="https://api.whatsapp.com/send/?phone=5491127723511"
+                                                target="_blank"><iconify-icon class="icon_reserva"
+                                                        icon="logos:whatsapp-icon"></iconify-icon></a> (011-1527723511) en el horario de 9 a 17 hs.</h2>
                                 
                                 <br>                        
                                 <h2>Datos de cuenta para pago de estadía:</h2>
