[FEAT]Cambio en datos de departamentos-4

--- a/pages/home.html
+++ b/pages/home.html
@@ -46,9 +46,9 @@
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./home.html">Inicio</a>
           </li>
-          <li class="navbar__item submenuopen">
+          <!-- <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./noticias.html">Noticias</a>
-          </li>
+          </li> -->
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./institucional.html"
               >Institucional</a
