--- a/pages/institucional.html
+++ b/pages/institucional.html
@@ -24,8 +24,8 @@
             <ul class="navbar__menu">
                 <li class="navbar__item submenuopen"><a class="navbar__link" href="./home.html">Inicio</a>
                 </li>
-                <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
-                </li>
+                <!-- <li class="navbar__item submenuopen"><a class="navbar__link" href="#">Noticias</a>
+                </li> -->
                 <li class="navbar__item submenuopen"><a class="navbar__link"
                         href="./institucional.html">Institucional</a>
                 </li>
