--- a/pages/beneficios.html
+++ b/pages/beneficios.html
@@ -60,9 +60,9 @@
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./home.html">Inicio</a>
           </li>
-          <li class="navbar__item submenuopen">
+          <!-- <li class="navbar__item submenuopen">
             <a class="navbar__link" href="#">Noticias</a>
-          </li>
+          </li> -->
           <li class="navbar__item submenuopen">
             <a class="navbar__link" href="./institucional.html"
               >Institucional</a
@@ -143,11 +143,11 @@
           </li>
 
           <li class="glide__slide banner__1">
-            <img
+            <a href="https://www.ameport.org.ar/page/default" target="_blank"><img
               class="banner__img"
               src="../img/banner_beneficios/convenioAmeport.png"
               alt=""
-            />
+            /></a>
           </li>
 
           <li class="glide__slide banner__1">
@@ -269,8 +269,10 @@
           <div role="tablist" class="dots1"></div>
         </div>
         <div class="glider_text">
-          <h1>¡Importante! Datos para reserva de departamentos:</h1>
-          <h2>
+          <h1 style="text-align: center;">Para tu comodidad se encuentran ubicados estratégicamente frente a Casa Central en AVDA. PTE. JULIO A. ROCA 771 - CABA </h1>
+          <a class="link_protocolo" href="../docs/Protocolo_uso_departamentos_CABA -011023.pdf" target="_blank">Condiciones de Uso y Reserva</a>
+          <br>
+          <h3>
             Para reservas o consultas comunicate al whatsapp
             <a
               class="wsp_reserva"
@@ -283,8 +285,8 @@
               ></iconify-icon
             ></a>
             (011-1527723511) en el horario de 9 a 17 hs.
-          </h2>
-          <h2>Datos de cuenta para pago de estadía:</h2>
+          </h3>
+          <h3>Datos de cuenta para pago de estadía:</h3>
           <h3>CBU: 0110010540001013410080</h3>
           <h3>Alias: RESERVAS.DPTOS.AP</h3>
           <h3>Se recomienda copiar y pegar los datos previos.</h3>
